# qtventure

./: .gitignore  README.md
hello/: main.cpp
picon/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  main.cpp
shell/: CMakeLists.txt  main.cpp
shell2/: CMakeLists.txt  Main.qml  main.cpp
sock/: CMakeLists.txt  main.cpp
